src/components/NavBar/NavBar.sass
@import colors
@import mixins

.nav-bar
  position: relative
  height: 80px
  padding: 0 60px
  background: $black
  display: flex
  align-items: center

  .menu-button
    position: relative
    z-index: 1

    background: none
    border: none
    border-radius: 0
    padding: 0
    margin-top: 10px

    color: $white
    @include font-weight(520)
    font-size: 20px

    cursor: pointer

    display: flex
    flex-direction: row
    align-items: center

    .label
      font-size: 20px
      margin: 0 (.9em - (1.25em / 2))


  .panel-bg.light
    position: absolute
    top: 0
    left: 0
    z-index: 2
    background: $white
    height: 100%

    transform: none
    transform-origin: left center
    transition: transform .5s ease

    display: flex
    align-items: center
    padding: 0 60px

    overflow: hidden

    .menu-button
      transition: transform .5s
      transform-origin: left center
      color: $black
      @include font-weight(570)


  &.panel-on-right
    justify-content: flex-end

    .menu-button
      flex-direction: row-reverse

    .panel-bg.light
      justify-content: flex-end
      transform: translateX(100vw) translateX(-100%)

  &.panel-on-left .panel-bg.light
    transform: none

  &.panel-full .panel-bg.light
    transform: scaleX(2.5)
    padding: 0 (60px / 2.5)

    .menu-button
      transform: scaleX(0.4)


  // When the menu opens the light panel slides 380px and the menu button gets the opposite
     transform to stay in place
  &.menu-open
    .panel-bg.light
      transform: translate(380px)

      .menu-button
        transform: translate(-380px)

    &.panel-on-right .panel-bg.light
      transform: translateX(100vw) translateX(-100%) translate(-380px)

      .menu-button
        transform: translate(380px)

    &.panel-full .panel-bg.light
      transform: translateX(380px) scaleX(2.5)

      .menu-button
        $translate: 380px / 2.5 * -1
        transform: translateX(#{$translate}) scaleX(0.4)



.nav-bar .menu-button :global(.icon)
  position: relative
  width: 2.5em
  margin-top: .2em

  // Doubling values and scaling to half sizes helps resolve issues with inconsistent rendering
     across browsers
  transform: scale(.5)

  & :global(.line)
    $thickness: .25em

    position: absolute
    top: -.5 * $thickness
    width: 100%

    &::before
      content: ''
      display: block

      height: $thickness
      transform: translateY(#{-$thickness})
      box-shadow: 0 $thickness 0 0

      width: 100%

      color: inherit

